[gd_scene load_steps=2 format=3 uid="uid://clindmg85x3ke"]

[ext_resource type="Script" uid="uid://bn3bxbf4am5ej" path="res://scenes/components/passive_generator/passive_generator.gd" id="1_bck8p"]

[node name="PassiveGenerator" type="Button"]
offset_right = 60.0
offset_bottom = 30.0
script = ExtResource("1_bck8p")

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 16.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 16.0
offset_right = 60.0
offset_bottom = 32.0

[node name="Timer" type="Timer" parent="."]
